Added "multipleChoice" field in a question
